2000-06-22  Ulrich Drepper  <drepper@redhat.com>

	* include/string.h: Add prototype for __strdup.

2000-06-22  Greg McGary  <greg@mcgary.org>

	* sysdeps/unix/syscalls.list (sys_mknod): Fix signatures.
	* sysdeps/unix/inet/syscalls.list (accept, getpeername, getsockname):
	Fix signatures.

2000-06-23  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/ia64/memcpy.S: Disable branch predict instruction.

2000-06-22  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/unix/sysv/linux/ia64/bits/statfs.h: New file.

2000-06-22  Jes Sorensen  <jes@linuxcare.com>

	* shlib-versions: Bump so versions to 6.1 for libc and libm on the
	ia64 to allow 2.2+ libraries to coexist with 2.1 ones.

2000-06-22  Ulrich Drepper  <drepper@redhat.com>

	* io/sys/stat.h: Define S_TYPEISMQ, S_TYPEISSEM, and S_TYPEISSHM.
	* sysdeps/generic/bits/stat.h: Define __S_TYPEISMQ, __S_TYPEISSEM,
	and __S_TYPEISSHM.
	* sysdeps/mach/hurd/bits/stat.h: Likewise.
	* sysdeps/unix/bsd/bits/stat.h: Likewise.
	* sysdeps/unix/bsd/osf/alpha/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/irix4/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/hpux/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/sysv4/i386/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/sysv4/solaris2/bits/stat.h: Likewise.
	* sysdeps/unix/sysv/aix/bits/stat.h: Likewise.
	* manual/filesys.texi: Document S_TYPEISMQ, S_TYPEISSEM, and
	S_TYPEISSHM.

2000-06-22  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Replace arg-count
	with signatures.

	* elf/dl-reloc.c (_dl_relocate_object): Fix typos.

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Fix sysctl entry.

2000-06-21  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_trans.c: Move initialization of winbuf and winbufend
	ahead.
